--- a/package.json
+++ b/package.json
@@ -7,10 +7,40 @@
   "license": "MIT",
   "author": "geta",
   "homepage": "https://github.com/geta-org/eslint-config-geta",
-  "keywords": ["eslint", "config", "react-native"],
+  "keywords": [
+    "eslint",
+    "config",
+    "react-native"
+  ],
   "bugs": "https://github.com/geta-org/eslint-config-geta/issues",
   "repository": {
     "url": "https://github.com/geta-org/eslint-config-geta",
     "type": "git"
+  },
+  "dependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
+    "@react-native/eslint-plugin": "^0.73.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-ft-flow": "^2.0.3",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "^2.8.8"
+  },
+  "peerDependencies": {
+    "eslint": ">=8",
+    "typescript": ">=3.3.1"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   }
 }
