--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@geta/eslint-config",
-  "version": "0.0.0",
+  "name": "@geta-org/eslint-config",
+  "version": "0.1.0",
   "private": false,
   "description": "ESLint configuration used by Geta.",
   "main": "index.js",
